--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 
 # Package Files #
 *.jar
+!gradle/wrapper/gradle-wrapper.jar
 *.war
 *.nar
 *.ear
@@ -28,6 +29,5 @@ replay_pid*
 
 # Ignore Gradle build output directory
 build
-
 
 .idea
